--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-    "accueil_h1": "Bienvenu sur Lend Me, premier site de crowdfunding multiculturel",
+    "accueil_h1": "Bienvenue sur Lend Me",
 
     "profil_user_nom_label": "Votre nom",
     "profil_user_prenom_label": "Votre prénom",
